<resources>

  <string name="app_name">Elephant Asia</string>
  <string name="Elephant">Elephant</string>

  <string name="female">Female</string>
  <string name="female_only">Female only</string>
  <string name="male_only">Male only</string>
  <string name="father">Father</string>
  <string name="mother">Mother</string>
  <string name="children">Children</string>
  <string name="add_child">Add child</string>
  <string name="not_set">Not set</string>
  <string name="male">Male</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="show">show</string>
  <string name="elephant_birthdate">Birthdate</string>
  <string name="elephant_name">Elephant name *</string>
  <string name="contact_name">Contact name</string>
  <string name="elephant_nickname">Nickname</string>
  <string name="elephant_registration_number">Registration ID</string>
  <string name="registration_location">Registration location</string>
  <string name="mte_registration_number">MTE registration number</string>
  <string name="registration_province">Registration province</string>
  <string name="registration_district">Registration district</string>
  <string name="registration_city">Registration city</string>
  <string name="elephant_show_title">%1$s - Preview </string>

  <string name="elephant_birth_location">Birth location</string>
  <string name="current_location">Current location</string>
  <string name="province">Province</string>
  <string name="district">District</string>
  <string name="city">City</string>

  <string name="validate">Validate</string>
  <string name="OK">OK</string>
  <string name="DOWNLOAD">DOWNLOAD</string>
  <string name="UPLOAD">UPLOAD</string>
  <string name="CANCEL">CANCEL</string>

  <string name="name_required">Name is required</string>
  <string name="sex_required">Sex is required</string>
  <string name="elephant_draft_added">Elephant added to draft</string>
  <string name="elephant_local_added">Elephant added to local database</string>


  <string name="owners">Owners</string>
  <string name="cornacs">Cornacs</string>
  <string name="vets">Vets</string>

  <string name="saved">saved</string>
  <string name="pending">pending</string>
  <string name="total">total</string>
  <string name="draft">draft</string>
  <string name="drafts">drafts</string>
  <string name="Draft">Draft</string>
  <string name="save">save</string>
  <string name="no_recent_item">no recent items</string>

  <string name="elephant_chip">Chip number #1</string>
  <string name="ear_tag">Ear tag</string>
  <string name="eyeD">EyeD</string>
  <string name="mte_owner">MTE - Ownership</string>
  <string name="sex">Sex</string>

  <string name="asia">ASIA</string>
  <string name="login">Log-In</string>
  <string name="username">username</string>
  <string name="password">password</string>
  <string name="credential">Use your personal credentials</string>

  <string name="empty_username">Empty username</string>
  <string name="empty_password">Empty password</string>
  <string name="empty_field">Field required</string>

  <string name="home_page">Home Page</string>
  <string name="open">Open</string>
  <string name="close">Close</string>

  <string name="search">Search</string>
  <string name="create">Create</string>
  <string name="current_animal">Current Animal</string>
  <string name="locations">Locations</string>
  <string name="reports">Reports</string>
  <string name="favorites">Favorites</string>
  <string name="settings">Application Settings</string>
  <string name="officials">Officials</string>
  <string name="support">Support</string>
  <string name="logout">Log out</string>

  <string name="add_elephant">Add Elephant</string>
  <string name="synchronize">Synchronize</string>
  <string name="profil">Profil</string>
  <string name="registration">Registration</string>
  <string name="contact">Contact</string>
  <string name="description">Description</string>
  <string name="parentage">Parentage</string>

  <string name="documents">Documents</string>

  <string name="search_result">%d Result(s)</string>
  <string name="no_item_found">No item found</string>

  <string name="not_synchronized_yet">Not synchronized yet</string>
  <string name="sync_db">Sync database</string>

  <string name="elephant_microchip">Elephant microchip</string>

  <string-array name="tusks">
    <item>None</item>
    <item>Right tusk only</item>
    <item>Left tusk only</item>
    <item>Both</item>
  </string-array>


  <string name="edit_elephant_title">Edit elephant - %1$s</string>

  <string name="tusk">Tusks</string>
  <string name="nails_front_left">Nails front left</string>
  <string name="nails_front_right">Nails front right</string>
  <string name="nails_rear_right">Nails rear right</string>
  <string name="nails_rear_left">Nails rear left</string>
  <string name="weight">Weight</string>
  <string name="girth">Girth</string>
  <string name="height">Height</string>
  <string name="phone">Phone</string>
  <string name="email">Email</string>
  <string name="address">Address</string>

  <string name="overview">Overview</string>

  <string name="name">Name</string>
  <string name="firstname">Firstname</string>
  <string name="lastname">Lastname</string>
  <string name="nickname">Nickname</string>
  <string name="delete">delete</string>
  <string name="edit">edit</string>
  <string name="select">select</string>
  <string name="unselect">unselect</string>
  <string name="recent">Recent</string>

  <string name="date">%1$04d/%2$02d/%3$02d</string>

  <string name="put_drafts">Put this elephant in drafts ?</string>

  <string name="add_contact">Add Contact</string>

  <string name="add_document">Add Document</string>
  <string name="get_photo">Capture</string>
  <string name="get_galerie">Import</string>

  <string name="error">Error</string>
  <string name="set_location_from_map">Set location from map ?</string>
  <string name="delete_this_elephant_from_local_db">Delete this elephant from local database ?</string>
  <string name="from_map">FROM MAP</string>
  <string name="manually">MANUALLY</string>
  <string name="remove_contact_from_list">remove contact from list</string>
  <string name="remove_elephant_from_list">remove elephant from list</string>
  <string name="add_elephant_to_favorite">add elephant to favorite</string>
  <string name="set_birth_location">Set birth location</string>
  <string name="set_registration_location">Set registration location</string>
  <string name="set_girth">Set girth in cm</string>
  <string name="set_height">Set height</string>
  
  <string name="edit_elephant">Edit the elephant</string>
  <string name="add_observation">Add observation</string>
  <string name="add_location">Add location</string>
  <string name="add_consultation">Add health report</string>
  <string name="delete_elephant">Delete the elephant</string>

  <string name="confirmation_sync">
    Please make sure your phone is connected to wifi and has enough battery to go through the procedure.
  </string>

  <string name="downloading_data">Downloading data from server...</string>

  <string name="updating_local">Updating local database...</string>
  <string name="select_elephant">Select elephant</string>
  <string name="sync_with_server">Sync with server</string>
  <string name="upload_selection">Upload selection</string>

  <string name="current_device_state">Current device state</string>
  <string name="last_sync">Last sync : %s</string>
  <string name="lastest_sync_activities">Lastest sync activities</string>
  <string name="outdated_local_db">Your local database is very old and might be completely outdated ; we recommand you to update it asap.</string>
  <string name="date_label">Date : %s</string>
  <string name="elephants_ready_to_be_upload">%d elephant(s) are ready to be uploaded</string>
  <string name="last_dl_sum"> Last download summary </string>
  <string name="last_up_sum"> Last upload summary </string>

  <string-array name="obs_priorities">
    <item>low</item>
    <item>medium</item>
    <item>high</item>
  </string-array>

  <string-array name="obs_priorities_filter">
    <item>low</item>
    <item>medium</item>
    <item>high</item>
    <item>None</item>
  </string-array>

  <string-array name="obs_categories">
    <item>medical</item>
    <item>physical</item>
    <item>administrative</item>
    <item>parentage</item>
    <item>other</item>
  </string-array>

  <string-array name="obs_categories_filter">
    <item>medical</item>
    <item>physical</item>
    <item>administrative</item>
    <item>parentage</item>
    <item>other</item>
    <item>None</item>
  </string-array>

  <string-array name="sort_order">
    <item>Ascending</item>
    <item>Descending</item>
    <item>None</item>
  </string-array>

  <string-array name="numbers">
    <item>Display all observations</item>
    <item>10</item>
    <item>20</item>
    <item>30</item>
    <item>40</item>
    <item>50</item>
  </string-array>

  <string-array name="temperament">
    <!--<item>Very dangerous</item>
    <item>Dangerous</item>
    <item>Sometimes</item>
    <item>Usually safe</item>
    <item>Always safe</item>
    <item>Unknown</item> -->
    <item>unknown</item>
    <item>calm</item>
    <item>aggressive</item>
  </string-array>

</resources>
