<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppThemeWhiteBackground"
    >

    <data>
        <variable name="province" type="String"/>
        <variable name="district" type="String"/>
        <variable name="city" type="String"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingBottom="16dp"
            >

            <EditText
                android:text="@{province}"
                android:id="@+id/province"
                android:hint="@string/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingBottom="16dp"
            >

            <EditText
                android:text="@{district}"
                android:id="@+id/district"
                android:hint="@string/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:paddingBottom="16dp"
            >

            <EditText
                android:text="@{city}"
                android:id="@+id/city"
                android:hint="@string/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</layout>



