<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="18dp">

   <ImageView
        android:id="@+id/splashscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/splash_screen_background"
        android:scaleType="fitXY"
        android:adjustViewBounds="false"
        android:contentDescription="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#22000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1.30">

            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@null"/>

            <TextView
                android:layout_marginTop="24dp"
                android:textSize="14pt"
                android:text="@string/elefant_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="12dp"
            android:paddingRight="22dp"
            android:paddingLeft="22dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center|top"
            android:layout_height="0dp"
            android:layout_weight="1.70">

            <TextView
                android:textSize="11pt"
                android:text="@string/login"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="4dp"
                android:textSize="9pt"
                android:text="@string/credential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginTop="40dp"
                android:theme="@style/App_EditTextStyle"
                android:id="@+id/login_id"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/login_pwd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/login"
        android:textSize="8pt"
        android:text="@string/login"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="50dp" />


</RelativeLayout>
